# ForgeFlow

./: .bandit  .gitignore  404.html  AGENTS.md  CLAUDE.md  LICENSE  Makefile  PROJECT.md  README.md  index.html  mypy.ini  pyproject.toml  robots.txt  sitemap.xml
.claude/: settings.json
.github/workflows/: ci.yml
assets/js/: 0d48772b.17d2c120.js  0d48772b.36b29c48.js  0d48772b.93a21549.js  0d48772b.9f1dc0b6.js  0d48772b.b7239757.js  0e384e19.4ebaba00.js  0e384e19.8408c485.js  0e384e19.e686ff0f.js  0e384e19.f41eee77.js  18c41134.7817ec2a.js  18c41134.b548b0f5.js  1e4232ab.18ea8bec.js  1e4232ab.d2d545ba.js  393be207.0e771693.js  393be207.18ef20aa.js  393be207.afe81d2c.js  4022b36e.368662b7.js  4022b36e.470cbbd4.js  4022b36e.8acfa9ed.js  4022b36e.f909dfae.js  472074a0.06a8a89c.js  472074a0.29716c94.js  472074a0.2e02944c.js  4ffcd517.1a9828d9.js  4ffcd517.62d10399.js  4ffcd517.63648b2c.js  4ffcd517.6609dd9d.js  533a09ca.1b2b2b19.js  533a09ca.d06d0f74.js  5c868d36.861b3647.js  5c868d36.8d83db5e.js  5c868d36.c43eafc8.js  68afcf15.60b7306f.js  68afcf15.618a8de1.js  68afcf15.d041a039.js  7c082059.04beae43.js  7c082059.04fc4498.js  7c082059.56b7fffa.js  814f3328.53062e0c.js  814f3328.af2c9aba.js  (+95 more)
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/authors/: index.html
blog/forgeflow-engineering-grade-automation/: index.html
blog/tags/: index.html
blog/tmux-inner-network-tunneling-for-remote-development/: index.html
default_rules/: task_planner_config.json
default_rules/cli_types/: codex_rules.py  gemini_rules.py
docs/: quick_start_mac.md  task_mode.md  tech.md
docs/advanced-patterns/: index.html
docs/configuration/: index.html
docs/custom-nodes/: index.html
docs/deployment/: index.html
docs/getting-started/: index.html
docs/intro/: index.html
documentation/: .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
documentation/blog/: authors.yml  (+3 more)
examples/: TODO.md  code_review_task.py  custom_rules_example.py  fastproxy_rules.py  improve_coverage_config.json  myproject_rules.py  task_planner_config.json  web_project_rules.py
forgeflow/: __init__.py  cli.py
hooks/: pre-commit
markdown-page/: index.html
scripts/: check-health.sh  setup-hooks.sh
specifications/: cli_reference.md  quick_start.md  rule_system.md  task_mode.md
tests/: conftest.py  test_ansi.py  test_automation.py  test_cli_adapter_factory.py  test_cli_type_rules.py  test_codex_compact_counter_integration.py  test_codex_rules.py  test_config.py  test_default_cli_rules.py  test_gemini_cli_adapter.py  test_gemini_rules.py  test_main.py  test_monitor_mode.py  test_notifier.py  test_prompt_detection.py  test_rule_loader.py  test_rules.py  test_state.py  test_task_rules.py  test_task_rules_loader.py  test_tmux_ctl.py  test_tool_call_error.py
user_custom_rules/: README.md
(+134 files in other folders)
