[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeflow"
version = "0.1.0"
description = "Automatically drives AI CLI in tmux to complete programming tasks"
authors = [{ name = "ForgeFlow Maintainers" }]
requires-python = ">=3.9"
dependencies = []
readme = "README.md"
license = "MIT"

[tool.setuptools.packages.find]
where = ["."]
include = ["forgeflow*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0", 
    "ruff>=0.12", 
    "black>=23.0",
    "mypy>=1.0",
    "bandit>=1.7",
    "radon>=5.0",
    "safety>=2.0",
    "flake8>=6.0",
    "flake8-bugbear>=23.0",
    "py-spy>=0.3"
]

[project.scripts]
forgeflow = "forgeflow.cli:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
