[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forgeflow"
version = "0.1.0"
description = "Automatically drives AI CLI in tmux to complete programming tasks"
authors = [{ name = "ForgeFlow Maintainers" }]
requires-python = ">=3.13"
dependencies = []
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.12",
    "black>=24.0",
    "mypy>=1.0",
    "bandit>=1.7",
    "radon>=5.0",
    "safety>=2.0",
    "flake8>=6.0",
    "flake8-bugbear>=23.0",
    "py-spy>=0.3"
]

[project.scripts]
forgeflow = "forgeflow.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/forgeflow"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E501", "F821"]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.13"
extraPaths = ["src"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disable_error_code = ["return"]
